Rename some date fields to use _on

--- a/app/views/renalware/shared/documents/_dated_confirmation_input.html.slim
+++ b/app/views/renalware/shared/documents/_dated_confirmation_input.html.slim
@@ -3,4 +3,4 @@
     td= fd.label :status, f.object.class.human_attribute_name(attribute)
     td= fd.input :status, as: :inline_radio_buttons,
         label: false, wrapper: "vertical_form"
-    td= fd.input :date, as: :date_picker, label: false, wrapper: "vertical_form"
+    td= fd.input :confirmed_on, as: :date_picker, label: false, wrapper: "vertical_form"
