--- a/app/views/renalware/shared/documents/_dated_result_input.html.slim
+++ b/app/views/renalware/shared/documents/_dated_result_input.html.slim
@@ -2,4 +2,4 @@
   tr
     td= fd.label :result, f.object.class.human_attribute_name(attribute)
     td= fd.input :result, label: false, wrapper: "vertical_form"
-    td= fd.input :date, as: :date_picker, label: false, wrapper: "vertical_form"
+    td= fd.input :recorded_on, as: :date_picker, label: false, wrapper: "vertical_form"
