Add workup summary to dashboards

--- a/app/views/renalware/transplants/donor_dashboards/show.html.slim
+++ b/app/views/renalware/transplants/donor_dashboards/show.html.slim
@@ -5,4 +5,5 @@
 
     h2 Donation Info
 
+    = render "renalware/transplants/donor_workups/summary"
     = render "renalware/transplants/donor_operations/list"
