Remove the use of timestamp helpers

--- a/app/views/renalware/shared/_last_update.html.slim
+++ b/app/views/renalware/shared/_last_update.html.slim
@@ -2,6 +2,6 @@
   - if version = record.versions.last
     span.note
       | Last update:&nbsp;
-      = timestamp version.created_at
+      = l version.created_at
       | &nbsp;by&nbsp;
       = who_did_it version
