--- a/app/views/renalware/transplants/recipient_workups/_summary.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_summary.html.slim
@@ -11,7 +11,7 @@ fieldset
         dt Last Update:
         dd
           - if version = @recipient_workup.versions.last
-            = timestamp version.created_at
+            = l version.created_at
             | &nbsp;by&nbsp;
             = who_did_it version
 
