--- a/app/views/renalware/transplants/donor_workups/_summary.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_summary.html.slim
@@ -1,5 +1,5 @@
 fieldset
-  legend Recipient Workup
+  legend Donor Workup
 
   - if @donor_workup.persisted?
     .large-3.columns
@@ -11,7 +11,7 @@ fieldset
         dt Last Update:
         dd
           - if version = @donor_workup.versions.last
-            = timestamp version.created_at
+            = l version.created_at
             | &nbsp;by&nbsp;
             = who_did_it version
 
