UI for adding a donation

--- a/app/views/renalware/transplants/donor_dashboards/show.html.slim
+++ b/app/views/renalware/transplants/donor_dashboards/show.html.slim
@@ -5,5 +5,6 @@
 
     h2 Donation Info
 
+    = render "renalware/transplants/donations/summary"
     = render "renalware/transplants/donor_workups/summary"
     = render "renalware/transplants/donor_operations/list"
