Use I18n.l date format for current regime, updated related tests.

--- a/app/views/renalware/pd_regimes/_current_regime.html.slim
+++ b/app/views/renalware/pd_regimes/_current_regime.html.slim
@@ -6,10 +6,10 @@ fieldset.current-regime
     .large-3.columns
       dl
         dt Regime Start Date:
-        dl= current.start_date
+        dl=l current.start_date
 
         dt Regime End Date:
-        dl= default_for_blank(current.end_date, 'Pending')
+        dl=default_for_blank((l current.end_date), 'Pending')
 
         dt Treatment:
         dl= current.treatment
