--- a/app/views/renalware/transplants/donations/new.html.slim
+++ b/app/views/renalware/transplants/donations/new.html.slim
@@ -4,7 +4,6 @@
   .columns.large-12
     .document
       = simple_form_for @donation,
-          url: patient_transplants_donation_path(@patient, @donation),
-          method: :patch,
+          url: patient_transplants_donations_path(@patient),
           wrapper: "horizontal_form" do |f|
         = render 'form', f: f
