--- a/app/views/renalware/transplants/donations/_summary.html.slim
+++ b/app/views/renalware/transplants/donations/_summary.html.slim
@@ -1,29 +1,32 @@
 fieldset
-  legend Donation
+  legend Donation Summary
 
-  - if @donation.persisted?
+  .row
+    .large-3.columns
+      dt Recipient:
+      dd Currently Unknown
+
     .large-3.columns
       dt Status:
-      dd= @donation.status.text
-
-    .large-3.columns
+      dd= donation.status.text
 
     .large-4.columns
       dl
         dt Last Update:
         dd
-          - if version = @donation.versions.last
+          - if version = donation.versions.last
             = l version.created_at
             | &nbsp;by&nbsp;
             = who_did_it version
 
     .large-2.columns
       .right
-        = link_to "View", patient_transplants_donation_path(@patient), class: "button tiny"
+        = link_to "View", patient_transplants_donation_path(@patient, donation), class: "button tiny"
         | &nbsp;
-        = link_to "Edit", edit_patient_transplants_donation_path(@patient), class: "button tiny"
-  - else
-    .call-to-action
-      = link_to edit_patient_transplants_donation_path(@patient) do
-        i.fa.fa-plus-circle
-        | Enter donation
+        = link_to "Edit", edit_patient_transplants_donation_path(@patient, donation), class: "button tiny"
+
+  - if donation.notes.present?
+    .row
+      .large-12.columns
+        dt Notes:
+        dd= donation.notes
