--- a/app/views/renalware/transplants/donations/_list.html.slim
+++ b/app/views/renalware/transplants/donations/_list.html.slim
@@ -13,5 +13,5 @@
   .row
     .large-12.columns
       .right
-        = link_to "Idntify a new recipient", new_patient_transplants_donation_path(@patient),
+        = link_to "Identify a New Recipient", new_patient_transplants_donation_path(@patient),
           class: 'button tiny'
