--- a/app/views/renalware/transplants/donations/_summary.html.slim
+++ b/app/views/renalware/transplants/donations/_summary.html.slim
@@ -4,19 +4,27 @@ fieldset
   .row
     .large-3.columns
       dt Recipient:
-      dd Currently Unknown
+      dd
+        i Unassigned
+        br
+        = "(#{donation.relationship_with_recipient.text})"
+
+    .large-2.columns
+      dt State:
+      dd= donation.state.text
+
+    .large-2.columns
+      dt Mismatch Grade:
+      dd= donation.mismatch_grade
 
     .large-3.columns
-      dt Status:
-      dd= donation.status.text
-
-    .large-4.columns
       dl
         dt Last Update:
         dd
           - if version = donation.versions.last
             = l version.created_at
-            | &nbsp;by&nbsp;
+            br
+            | by&nbsp;
             = who_did_it version
 
     .large-2.columns
