Add missing relationship field (other)

--- a/app/views/renalware/transplants/donations/_form.html.slim
+++ b/app/views/renalware/transplants/donations/_form.html.slim
@@ -15,6 +15,7 @@ ruby:
   = render layout: "renalware/shared/fieldset",
       locals: { legend: "Recipient", name: "recipient" } do
     = f.input :relationship_with_recipient
+    = f.input :relationship_with_recipient_other
     = f.input :blood_group_compatibility, as: :inline_radio_buttons
     = f.input :mismatch_grade, input_html: { class: "small-input" }
     = f.input :paired_pooled_donation
