Tweak donor workup UI

--- a/app/views/renalware/transplants/donor_workups/_record_header.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_record_header.html.slim
@@ -8,6 +8,7 @@
       = render "renalware/shared/last_update", record: @workup
 
     dl.sub-nav
+      dd= link_to "Donation Info", patient_transplants_donor_dashboard_path(@patient)
       dd= link_to "View", patient_transplants_donor_workup_path(@patient)
       dd= link_to "Edit", edit_patient_transplants_donor_workup_path(@patient)
 
