--- a/app/views/renalware/transplants/donor_workups/_summary.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_summary.html.slim
@@ -2,24 +2,25 @@ fieldset
   legend Donor Workup
 
   - if @donor_workup.persisted?
-    .large-3.columns
+    .row
+      .large-3.columns
 
-    .large-3.columns
+      .large-3.columns
 
-    .large-4.columns
-      dl
-        dt Last Update:
-        dd
-          - if version = @donor_workup.versions.last
-            = l version.created_at
-            | &nbsp;by&nbsp;
-            = who_did_it version
+      .large-4.columns
+        dl
+          dt Last Update:
+          dd
+            - if version = @donor_workup.versions.last
+              = l version.created_at
+              | &nbsp;by&nbsp;
+              = who_did_it version
 
-    .large-2.columns
-      .right
-        = link_to "View", patient_transplants_donor_workup_path(@patient), class: "button tiny"
-        | &nbsp;
-        = link_to "Edit", edit_patient_transplants_donor_workup_path(@patient), class: "button tiny"
+      .large-2.columns
+        .right
+          = link_to "View", patient_transplants_donor_workup_path(@patient), class: "button tiny"
+          | &nbsp;
+          = link_to "Edit", edit_patient_transplants_donor_workup_path(@patient), class: "button tiny"
   - else
     .call-to-action
       = link_to edit_patient_transplants_donor_workup_path(@patient) do
