Use I18n.l date format for modalities and patient born_on/died_on dates. Updated related tests.

--- a/app/views/renalware/deaths/index.html.slim
+++ b/app/views/renalware/deaths/index.html.slim
@@ -24,6 +24,6 @@
           td= patient.nhs_number
           td= patient.local_patient_id
           td= patient.sex
-          td= patient.born_on
-          td= patient.died_on
+          td= l patient.born_on
+          td= l patient.died_on
           td= patient.age
