--- a/app/views/renalware/modalities/modalities/index.html.slim
+++ b/app/views/renalware/modalities/modalities/index.html.slim
@@ -15,5 +15,5 @@
         tr
           td= modality.description.name
           td= modality.notes
-          td= modality.started_on
-          td= modality.ended_on
+          td= l modality.started_on
+          td= l modality.ended_on
