--- a/app/views/renalware/patients/_apd_regimes.html.slim
+++ b/app/views/renalware/patients/_apd_regimes.html.slim
@@ -19,9 +19,9 @@ table.apd-regimes
             = pipe_separator
           = link_to "View", patient_pd_regime_path(@patient, r.id), class: "view-pd-regime"
         td valign="top"
-          = r.start_date
+          = l r.start_date
         td valign="top"
-          = default_for_blank(r.end_date, "Pending")
+          = default_for_blank_date(r.end_date, "Pending")
         td valign="top"
           = r.treatment
         td valign="top"
