Use I18n.l date format for pd infections(peritonitis/exit site). Updated related tests.

--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -1,4 +1,4 @@
-- header = "Exit Site Infection - Diagnosed: #{@exit_site_infection.diagnosis_date.strftime("%d/%m/%Y")}"
+- header = "Exit Site Infection - Diagnosed: #{ l @exit_site_infection.diagnosis_date }"
 = render layout: "renalware/pd/layout", locals: { header: header, patient: @patient } do
   .row
     p
