--- a/app/views/renalware/patients/_exit_site_infections.html.slim
+++ b/app/views/renalware/patients/_exit_site_infections.html.slim
@@ -15,7 +15,7 @@ table.responsive
             = pipe_separator
           = link_to "View", patient_exit_site_infection_path(@patient, e.id), class: "view-es-infection", id: "view-es-infection-#{e.id}"
         td valign="top"
-          = e.diagnosis_date
+          = l e.diagnosis_date
 
         td valign="top"
           = e.outcome
