Use two scopes instead of a generic one

--- a/app/views/renalware/transplants/registration_statuses/_list.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_list.html.slim
@@ -11,7 +11,7 @@ fieldset.status-history
           th By
           th Termination Date
         tbody
-          - @registration.statuses.ordered(:desc).each do |status|
+          - @registration.statuses.reversed.each do |status|
             tr
               td
                 = link_to "Edit",
