--- a/app/views/renalware/transplants/registration_statuses/_list.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_list.html.slim
@@ -15,12 +15,12 @@ fieldset.status-history
             tr
               td
                 = link_to "Edit",
-                  edit_patient_transplants_registration_status_path(@patient, status)
+                    edit_patient_transplants_registration_status_path(@patient, status)
                 = pipe_separator
                 = link_to 'Delete',
-                  patient_transplants_registration_status_path(@patient, status),
-                  method: :delete,
-                  data: { confirm: I18n.t("prompts.confirm_delete") }
+                    patient_transplants_registration_status_path(@patient, status),
+                    method: :delete,
+                    data: { confirm: I18n.t("prompts.confirm_delete") }
               td= l status.started_on
               td= status.description
               td= status.updated_by.to_s(:full_name)
@@ -28,5 +28,6 @@ fieldset.status-history
 
   .row
     .large-12.columns
-      .right= link_to "Update Status", new_patient_transplants_registration_status_path(@patient),
-        class: 'button tiny'
+      .right
+        = link_to "Update Status", new_patient_transplants_registration_status_path(@patient),
+            class: 'button tiny'
