--- a/app/views/renalware/pd_regimes/_current_regime.html.slim
+++ b/app/views/renalware/pd_regimes/_current_regime.html.slim
@@ -9,7 +9,7 @@ fieldset.current-regime
         dl=l current.start_date
 
         dt Regime End Date:
-        dl=default_for_blank((l current.end_date), 'Pending')
+        dl=default_for_blank_date(current.end_date, 'Pending')
 
         dt Treatment:
         dl= current.treatment
