--- a/app/views/renalware/patients/_patient_info_header.html.slim
+++ b/app/views/renalware/patients/_patient_info_header.html.slim
@@ -3,6 +3,6 @@ h1#patient-header-info
   = "KCH: #{@patient.local_patient_id}, "
   = "Age: #{@patient.age}, "
   = "#{@patient.sex}, "
-  = "DoB: #{@patient.born_on}, "
+  = "DoB: #{l @patient.born_on}, "
   = "#{@patient.current_modality.blank? || @patient.current_modality.new_record? ? "No Modal" : @patient.current_modality.description.name}"
 = render partial: "renalware/patients/patient_sub_nav", locals: { model: @patient }
