Created change_type.rb to store reason for change modality type options. Applied to modalities new form.

--- a/app/views/renalware/modalities/modalities/new.html.slim
+++ b/app/views/renalware/modalities/modalities/new.html.slim
@@ -33,7 +33,7 @@
                 = m.input :modal_change_type,
                     label: "Type of Change",
                     input_html: { class: "modal-change-type" },
-                    collection: [["Other", "Other"], ["Haemodialysis To PD", "HaemodialysisToPD"], ["PD To Haemodialysis", "PDToHaemodialysis"]]
+                    collection: Renalware::Modalities::ChangeType::OPTIONS
 
               li.hide-death
                 = m.input :reason_id,
