--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require select2/css/select2.min
  *= require font-awesome
  *= require foundation-datepicker
+ *= require jquery-ui/core
+ *= require jquery-ui/autocomplete
  *= require_tree ./lib
  *= require_tree ./renalware
  */
