--- a/app/views/renalware/shared/_attributes_list.html.slim
+++ b/app/views/renalware/shared/_attributes_list.html.slim
@@ -15,6 +15,8 @@ ruby:
         "Yes"
       when value.is_a?(FalseClass)
         "No"
+      when value.is_a?(Renalware::Patient)
+        value.unique_label
       when
         simple_format(value.to_s)
       else
