Tweak some donor operation views & model

--- a/app/views/renalware/transplants/donor_operations/_record_header.html.slim
+++ b/app/views/renalware/transplants/donor_operations/_record_header.html.slim
@@ -4,7 +4,7 @@
     = render "renalware/patients/mini_renal_profile", model: @patient
 
     h2
-      | Donor Operation&nbsp;
+      | Donor Transplant Operation&nbsp;
       = render "renalware/shared/last_update", record: @donor_operation
 
     - if @donor_operation.persisted?
