--- a/app/views/renalware/transplants/donor_operations/_list.html.slim
+++ b/app/views/renalware/transplants/donor_operations/_list.html.slim
@@ -1,5 +1,5 @@
 fieldset.status-history
-  legend Donor Operations
+  legend Donor Transplant Operations
 
   - if @donor_operations.empty?
     .call-to-action
@@ -14,6 +14,7 @@ fieldset.status-history
             th
             th Op Date
             th Kidney Side
+            th Type of Nephrectomy on donor
           tbody
             - @donor_operations.each do |operation|
               tr
@@ -21,6 +22,7 @@ fieldset.status-history
                 td= link_to patient_transplants_donor_operation_path(@patient, operation) do
                     = l operation.performed_on
                 td= operation.kidney_side.try(:text)
+                td= operation.nephrectomy_type.try(:text)
 
     .row
       .large-12.columns
