--- a/app/views/renalware/transplants/donor_dashboards/show.html.slim
+++ b/app/views/renalware/transplants/donor_dashboards/show.html.slim
@@ -3,7 +3,7 @@
     = render "renalware/patients/patient_info_header", model: @patient
     = render "renalware/patients/mini_renal_profile", model: @patient
 
-    h2 Donation Info
+    h2 Transplant Donation Info
 
     = render "renalware/transplants/donations/list"
     = render "renalware/transplants/donor_workups/summary"
