--- a/app/views/renalware/transplants/donor_operations/_record_header.html.slim
+++ b/app/views/renalware/transplants/donor_operations/_record_header.html.slim
@@ -9,7 +9,7 @@
 
     - if @donor_operation.persisted?
       dl.sub-nav
-        dd= link_to "Donation Info", patient_transplants_donor_dashboard_path(@patient)
+        dd= link_to "Transplant Donation Info", patient_transplants_donor_dashboard_path(@patient)
         dd= link_to "View", patient_transplants_donor_operation_path(@patient, @donor_operation)
         dd= link_to "Edit", edit_patient_transplants_donor_operation_path(@patient, @donor_operation)
 
