Updated user related files and tests with revised given/family name attributes.

--- a/app/views/renalware/devise/registrations/new.html.erb
+++ b/app/views/renalware/devise/registrations/new.html.erb
@@ -5,13 +5,13 @@
     <%= custom_devise_error_messages! %>
 
     <div class="field large-8 small-6">
-      <%= f.label :first_name %><br />
-      <%= f.text_field :first_name, autofocus: true %>
+      <%= f.label :given_name %><br />
+      <%= f.text_field :given_name, autofocus: true %>
     </div>
 
     <div class="field large-8 small-6">
-      <%= f.label :last_name %><br />
-      <%= f.text_field :last_name %>
+      <%= f.label :family_name %><br />
+      <%= f.text_field :family_name %>
     </div>
 
     <div class="field large-8 small-6">
