Updated doctor related files and tests with revised given/family name attributes.

--- a/app/views/renalware/doctors/_form.html.slim
+++ b/app/views/renalware/doctors/_form.html.slim
@@ -1,12 +1,12 @@
 = render partial: 'renalware/shared/errors', locals: { model: f.object }
 
 .row
-  = f.label :first_name
-  = f.text_field :first_name
+  = f.label :given_name
+  = f.text_field :given_name
 
 .row
-  = f.label :last_name
-  = f.text_field :last_name
+  = f.label :family_name
+  = f.text_field :family_name
 
 .row
   = f.label :email
