--- a/app/views/renalware/shared/_errors.html.slim
+++ b/app/views/renalware/shared/_errors.html.slim
@@ -1,5 +1,5 @@
 - if model.errors.any?
-  .row
+  .row.large-12.columns
     ul.error-messages
       - model.errors.full_messages.each do |msg|
         li
