Reduce font-size for table layouts
Makes room for the upcoming sidebar

--- a/app/assets/stylesheets/lib/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/lib/foundation_and_overrides.scss
@@ -1285,7 +1285,7 @@ $sub-nav-list-margin: rem-calc(-4 0 0);
 
 // These control the row padding and font styles
 // $table-row-padding: rem-calc(9 10);
-// $table-row-font-size: rem-calc(14);
+$table-row-font-size: rem-calc(13);
 // $table-row-font-color: $jet;
 // $table-line-height: rem-calc(18);
 
